# bigdata

./: README.md  read.md
UI/点餐系统/: 点餐系统.xd
android/DemoApplication/: build.gradle  settings.gradle
android/HlApplication/: settings.gradle
android/IOT/app/: CMakeLists.txt  build.gradle
android/IOT/app/src/androidTest/java/com/cyyaw/iot/: ExampleInstrumentedTest.java
android/IOT/app/src/main/: AndroidManifest.xml
android/IOT/app/src/main/cpp/: native-lib.cpp
android/IOT/app/src/main/java/com/cyyaw/iot/activity/: BaseActivity.java  MainActivity.java  WangyiPlayer.java
android/IOT/app/src/main/java/com/cyyaw/iot/activity/adapter/: HomeAdapter.java  MyCollectAdapter.java  MyPagerAdapter.java  NewsAdapter.java  VideoAdapter.java  ViewPagerAdapter.java
android/IOT/app/src/main/java/com/cyyaw/iot/activity/entity/: TabEntity.java
android/IOT/app/src/main/java/com/cyyaw/iot/activity/fragment/: BaseFragment.java  HomeFragment.java  MyFragment.java  NewsFragment.java
android/IOT/app/src/main/java/com/cyyaw/iot/activity/view/: AutoHeightListView.java  FixedViewPager.java
android/IOT/app/src/main/java/com/cyyaw/iot/view/: AutoHeightListView.java  CircleTransform.java  FixedViewPager.java
android/IOT/app/src/main/res/layout/: activity_main.xml  fr_simple_card.xml  fragment_home.xml  title_bar.xml
android/IOT/app/src/main/res/values/: colors.xml
android/IOT/app/src/test/java/com/cyyaw/iot/: ExampleUnitTest.java
android/socialize/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
common/: pom.xml
java/: pom.xml
jpa/: pom.xml
windows/: .gitignore
(+3242 files in other folders)
